fix: Remove page width to remove horizontal scrollbar

--- a/src/components/page/page.module.scss
+++ b/src/components/page/page.module.scss
@@ -1,6 +1,5 @@
 .root {
   min-height: 100vh;
-  width: 100vw;
   display: flex;
   flex-direction: column;
 }
